# practice-apache-beam

./: README.md  pyproject.toml
src/: side_input.py
tests/: test_side_input.py
